examples/smlfmt-1.2.0/test/fail/bad-local-in-end-1.sml
local
  val x = 2
  local
    val y = 3
in
  val z = 4
end
